[package]
name = "wordbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
salvo = { version = "0.37.7", features = ["affix", "serve-static"] }
serde = { version = "1.0.151", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
] }
tera = "1.17.1"
tokio = { version = "1.23.0", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
